# manga-to-kindle

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml
.github/workflows/: deploy.yaml  test_and_lint.yaml
op_downloader/: __main__.py  cli.py  downloader.py  exceptions.py
telegram-bot/: .gitignore  deploy.sh  handler.py  package-lock.json  requirements.txt  serverless.yml
test/: conftest.py  test_downloader.py
