[tool.poetry]
version = "0.1.0"
name = "op_downloader"
description = "Download One Piece Manga Chapters from TCB Scans"
readme = "README.md"
license = "MIT"
keywords = []
authors = ["Guillem Orellana Trullols <guillem.orellana@gmail.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = "*"
beautifulsoup4 = "*"
toml = "*"
Pillow = "*"
typer = "*"
aiocache = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pre-commit = "*"

[tool.poetry.group.lambda]
optional = true

[tool.poetry.group.lambda.dependencies]
mangum = "*"

[[tool.mypy.overrides]]
module = "aiocache.*,aws_lambda_typing.*,telegram.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 80

[tool.ruff.lint]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  "F401",
]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["ticker_info"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
